out.txt
+ CC=/usr/lib/ccache/bin/gcc
+ make -j15
make[1]: Nothing to be done for `all'.
  CHK     include/generated/uapi/linux/version.h
  CC      scripts/mod/devicetable-offsets.s
make[1]: Nothing to be done for `relocs'.
  CHK     include/generated/utsrelease.h
  GEN     scripts/mod/devicetable-offsets.h
  HOSTCC  scripts/mod/file2alias.o
  CALL    scripts/checksyscalls.sh
  HOSTLD  scripts/mod/modpost
  CHK     include/generated/compile.h
  PASYMS  arch/x86/realmode/rm/pasyms.h
  LDS     arch/x86/realmode/rm/realmode.lds
  LD      arch/x86/realmode/rm/realmode.elf
  RELOCS  arch/x86/realmode/rm/realmode.relocs
  OBJCOPY arch/x86/realmode/rm/realmode.bin
  AS      arch/x86/realmode/rmpiggy.o
  LD      arch/x86/realmode/built-in.o
  VDSOSYM arch/x86/vdso/vdso-syms.lds
  VDSOSYM arch/x86/vdso/vdsox32-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-int80-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-syscall-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-sysenter-syms.lds
  VDSOSYM arch/x86/vdso/vdso32-syms.lds
  LD      arch/x86/vdso/built-in.o
  CC      mm/migrate.o
  LD      arch/x86/built-in.o
In file included from mm/migrate.c:44:0:
include/xen/heteromem.h:37:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 int send_hotpage_skiplist();
 ^
mm/migrate.c:92:1: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 void init_hetero_list_fn();
 ^
mm/migrate.c:1180:6: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 void init_hetero_list_fn(){
      ^
mm/migrate.c: In function ‘init_hetero_list_fn’:
mm/migrate.c:1187:16: warning: assignment makes pointer from integer without a cast [enabled by default]
   skiplist_arr = (unsigned long)kmalloc(sz, GFP_KERNEL);
                ^
mm/migrate.c: In function ‘sys_move_pages’:
mm/migrate.c:1757:9: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘unsigned int’ [-Wformat=]
         pg_busy, pg_rtnode_err, pg_notexist, pg_nopte);
         ^
mm/migrate.c:1763:5: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘unsigned int’ [-Wformat=]
     nr_migrate_success,nr_pages);
     ^
mm/migrate.c: In function ‘print_all_conversion’:
mm/migrate.c:2586:3: warning: passing argument 1 of ‘pmd_offset’ from incompatible pointer type [enabled by default]
   pmd_t *pmd = pmd_offset(pgd, vma->vm_start);  
   ^
In file included from include/linux/mm.h:44:0,
                 from include/linux/migrate.h:4,
                 from mm/migrate.c:15:
/home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/pgtable.h:535:22: note: expected ‘struct pud_t *’ but argument is of type ‘struct pgd_t *’
 static inline pmd_t *pmd_offset(pud_t *pud, unsigned long address)
                      ^
mm/migrate.c:2590:3: warning: passing argument 1 of ‘pmd_offset’ from incompatible pointer type [enabled by default]
   pmd_t *pmd1 = pmd_offset(pgd1, vma->vm_end);  
   ^
In file included from include/linux/mm.h:44:0,
                 from include/linux/migrate.h:4,
                 from mm/migrate.c:15:
/home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/pgtable.h:535:22: note: expected ‘struct pud_t *’ but argument is of type ‘struct pgd_t *’
 static inline pmd_t *pmd_offset(pud_t *pud, unsigned long address)
                      ^
mm/migrate.c:2594:3: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘void *’ [-Wformat=]
   printk("kmap(page) %lu\n",kmap(page));
   ^
mm/migrate.c:2599:3: warning: passing argument 1 of ‘virt_to_phys’ makes pointer from integer without a cast [enabled by default]
   printk("virt_to_phys(vma->vm_start) %lu\n",virt_to_phys(vma->vm_start));
   ^
In file included from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/realmode.h:5:0,
                 from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/acpi.h:32,
                 from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/fixmap.h:19,
                 from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/apic.h:12,
                 from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/smp.h:13,
                 from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/mmzone_64.h:10,
                 from /home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/mmzone.h:4,
                 from include/linux/mmzone.h:933,
                 from include/linux/gfp.h:4,
                 from include/linux/mm.h:8,
                 from include/linux/migrate.h:4,
                 from mm/migrate.c:15:
/home/sudarsun/devel/nvm_3.9/arch/x86/include/asm/io.h:111:27: note: expected ‘volatile void *’ but argument is of type ‘long unsigned int’
 static inline phys_addr_t virt_to_phys(volatile void *address)
                           ^
mm/migrate.c:2599:3: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘phys_addr_t’ [-Wformat=]
   printk("virt_to_phys(vma->vm_start) %lu\n",virt_to_phys(vma->vm_start));
   ^
mm/migrate.c:2609:4: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘void *’ [-Wformat=]
    printk("kmap(vmapg) %lu\n",kmap(vmapg));
    ^
mm/migrate.c:2614:4: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘void *’ [-Wformat=]
    printk("kmap(vmapgend) %lu\n",kmap(vmapgend));
    ^
mm/migrate.c:2623:5: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘void *’ [-Wformat=]
     printk("kmap(vmapg) %lu\n",kmap(vmapg)); 
     ^
mm/migrate.c: At top level:
mm/migrate.c:2648:6: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 void hetero_print_vmastats(){
      ^
mm/migrate.c: In function ‘check_pte_range’:
mm/migrate.c:2701:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   struct page *page;
   ^
mm/migrate.c:2702:7: warning: unused variable ‘nid’ [-Wunused-variable]
   int nid;
       ^
mm/migrate.c: At top level:
mm/migrate.c:2913:6: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 void print_all_vmas() {
      ^
mm/migrate.c: In function ‘check_vma_exists’:
mm/migrate.c:2933:20: warning: unused variable ‘mm’ [-Wunused-variable]
  struct mm_struct *mm;
                    ^
mm/migrate.c: At top level:
mm/migrate.c:2997:5: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
 int do_complete_page_walk() {
     ^
mm/migrate.c: In function ‘do_complete_page_walk’:
mm/migrate.c:3024:68: error: ‘pagelist’ undeclared (first use in this function)
        flags|MPOL_MF_MOVE|MPOL_MF_MOVE_ALL| MPOL_MF_DISCONTIG_OK, &pagelist);
                                                                    ^
mm/migrate.c:3024:68: note: each undeclared identifier is reported only once for each function it appears in
mm/migrate.c: In function ‘hetero_filter’:
mm/migrate.c:3048:8: warning: unused variable ‘c’ [-Wunused-variable]
   char c;
        ^
In file included from include/linux/preempt.h:11:0,
                 from include/linux/spinlock.h:50,
                 from include/linux/mmzone.h:7,
                 from include/linux/gfp.h:4,
                 from include/linux/mm.h:8,
                 from include/linux/migrate.h:4,
                 from mm/migrate.c:15:
mm/migrate.c: In function ‘sys_move_inactpages’:
include/linux/list.h:22:2: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
  struct list_head name = LIST_HEAD_INIT(name)
  ^
mm/migrate.c:3118:2: note: in expansion of macro ‘LIST_HEAD’
  LIST_HEAD(pagelist);
  ^
mm/migrate.c:3382:1: warning: label ‘out_plug’ defined but not used [-Wunused-label]
 out_plug:
 ^
mm/migrate.c:3084:16: warning: unused variable ‘end’ [-Wunused-variable]
  unsigned long end=0;
                ^
mm/migrate.c:3082:26: warning: unused variable ‘vma’ [-Wunused-variable]
  struct vm_area_struct * vma;
                          ^
mm/migrate.c: In function ‘hetero_stats_addvmapg’:
mm/migrate.c:2646:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make[1]: *** [mm/migrate.o] Error 1
make: *** [mm] Error 2
make: *** Waiting for unfinished jobs....
make: *** wait: No child processes.  Stop.
+ CC=/usr/lib/ccache/bin/gcc
+ make bzImage -j15
